# PyRAG-Kit

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  RECALL_TEST_PLAN.md  REFACTORING_PLAN.md  config.ini.example  config.toml.example  logo_ASCII.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: release.yml
docs/: REFACTORING_PLAN.md  SUMMARY.md
docs/developer_docs/: REFACTORING_PLAN.md  developer-guide.md
docs/user_guide/: configuration.md  core-concepts.md  getting-started.md  introduction.md  llm-providers.md  user-guide.md
scripts/: build_binary_release.py  embed_knowledge_base.py  extract_release_notes.py
src/: __init__.py
src/chat/: core.py
src/etl/: pipeline.py
src/models/: __init__.py  document.py
src/providers/: anthropic.py  deepseek.py  factory.py  google.py  grok.py  jina.py  lm_studio.py  local_hash.py  model_providers.py  ollama.py  openai.py  openai_compatible.py  qwen.py  siliconflow.py  siliconflow_rerank.py  volcengine.py
src/retrieval/: retriever.py  snapshot_repository.py
src/retrieval_test/: core.py  excel_logger.py
src/runtime/: contracts.py
src/services/: chat_service.py  embedding_service.py  knowledge_build_service.py  retrieval_service.py
src/ui/: config_menu.py  display_utils.py
src/utils/: cleanup.py  config.py  log_manager.py
tests/: test_config.py  test_main_entry.py  test_release_scripts.py
tests/chat/: test_core.py
tests/etl/: test_hierarchical_splitter.py  test_pipeline.py
tests/providers/: test_factory.py  test_failure_contracts.py  test_google_genai.py  (+1 more)
(+17 files in other folders)
